@@ -1,5 +1,6 @@
 * 1.2.0
 	* New features:
+		- IStyle add setClass() method(2015-07-31)
 		- Fix Ilabel auto width issue when it is in small area(2015-07-21)
 		- IView supports background image(2015-07-17)
 		- IButton supports IEventHighlight|IEventUnhighlight(2015-07-17)
